syntax = "proto3";

message GetShopPageBotsData {
    string page_id = 1;
}
