syntax = "proto3";

import "Shop/Bots/ShopBotData.proto";

message ShopPageBotsData {
    string page_id = 1;
    repeated ShopBotData bots = 2;
}
